<resources>
    <string name="app_name">Математическая викторина</string>
    <string name="start">Начать игру</string>
    <string name="back">Назад</string>
    <string name="level">Уровень</string>
    <string name="text_continue">Продолжить</string>
    <string name="level_1">Уровень 1</string>
    <string name="level_2">Уровень 2</string>
    <string name="level_3">Уровень 3</string>
    <string name="level_4">Уровень 4</string>
    <string name="level_5">Уровень 5</string>

    <string name="lvl1_text_0">Ноль</string>
    <string name="lvl1_text_1">Один</string>
    <string name="lvl1_text_2">Два</string>
    <string name="lvl1_text_3">Три</string>
    <string name="lvl1_text_4">Четыре</string>
    <string name="lvl1_text_5">Пять</string>
    <string name="lvl1_text_6">Шесть</string>
    <string name="lvl1_text_7">Семь</string>
    <string name="lvl1_text_8">Восемь</string>
    <string name="lvl1_text_9">Девять</string>
    <string name="back_">←</string>
    <string name="x">X</string>

    <string name="lvl2_text_1">I</string>
    <string name="lvl2_text_2">II</string>
    <string name="lvl2_text_3">III</string>
    <string name="lvl2_text_4">IV</string>
    <string name="lvl2_text_5">V</string>
    <string name="lvl2_text_6">VI</string>
    <string name="lvl2_text_7">VII</string>
    <string name="lvl2_text_8">VIII</string>
    <string name="lvl2_text_9">IX</string>
    <string name="lvl2_text_10">X</string>
    <string name="One">1</string>
    <string name="Two">2</string>

    <string name="lvl3_text_1">1/16</string>
    <string name="lvl3_text_2">1/8</string>
    <string name="lvl3_text_3">3/16</string>
    <string name="lvl3_text_4">1/4</string>
    <string name="lvl3_text_5">5/16</string>
    <string name="lvl3_text_6">1/3</string>
    <string name="lvl3_text_7">3/8</string>
    <string name="lvl3_text_8">7/16</string>
    <string name="lvl3_text_9">1/2</string>
    <string name="lvl3_text_10">9/16</string>
    <string name="lvl3_text_11">5/8</string>
    <string name="lvl3_text_12">2/3</string>
    <string name="lvl3_text_13">11/16</string>
    <string name="lvl3_text_14">3/4</string>
    <string name="lvl3_text_15">13/16</string>
    <string name="lvl3_text_16">7/8</string>
    <string name="lvl3_text_17">15/16</string>
    <string name="lvl3_text_18">1</string>
    <string name="lvl3_text_19">4/3</string>
    <string name="lvl3_text_20">3/2</string>
    <string name="lvl3_text_21">7/4</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="five">5</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="log_in">Логин</string>
    <string name="log">Вход</string>
    <string name="Name">Имя пользователя</string>
    <string name="reg">Зарегистрироваться</string>
</resources>