<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ImageView
android:layout_width="match_parent"
android:layout_height="match_parent"
android:scaleType="centerCrop"
android:src="@drawable/level1" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingHorizontal="20dp"
                    android:textSize="24sp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_stroke_dark_red_press_white"
                    android:text="@string/back" />
            </LinearLayout>

            <ScrollView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/constraint4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_game_levels"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="@string/One" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_game_levels"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="@string/Two" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_game_levels"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="@string/Three" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_game_levels"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="@string/Four" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_game_levels"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="@string/five" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="X" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="X" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="X" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="10dp"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/bg"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="X" />
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>